# tui-candlestick-chart

./: Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: rust.yml
examples/: binance.rs  simple.rs
src/: candle.rs  candlestick_chart.rs  candlestick_chart_state.rs  lib.rs  symbols.rs  utils.rs  x_axis.rs  y_axis.rs
