[package]
name = "ratatui-candlestick-chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"]}
itertools = { version= "0.12", default-features = false, features = ["use_alloc"] }
ordered-float = { version = "4.0", default-features = false }
ratatui = { version = "0.25.0", default-features = false }
unicode-segmentation = "1.10.1"

[dev-dependencies]
crossterm = "0.27"
indoc = "2"
ratatui = "0.25.0"
